--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
   <meta charset="utf-8">
   <title>StagePlatformEtude</title>
   <base href="/">
+  <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
   <app-root></app-root>
 </body>
+<script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
 </html>
